# pypkgs_ubc

./: CONTRIBUTING.rst  README.md  pyproject.toml
.github/workflows/: build.yml  deploy.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.ipynb
docs/source/: modules.rst  pypkgs_ubc.rst
pypkgs_ubc/: pypkgs_ubc.py
tests/: test_pypkgs_ubc.py
