[tool.poetry]
name = "pypkgs_ubc"
version = "0.1.2"
description = "Demo python package"
authors = ["ttimbers <tiffany.timbers@stat.ubc.ca>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/UBC-MDS/pypkgs_ubc"
repository = "https://github.com/UBC-MDS/pypkgs_ubc"
documentation = 'https://pypkgs_ubc.readthedocs.io'

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
codecov = "^2.1.11"
python-semantic-release = "^7.15.0"
flake8 = "^3.8.4"
Sphinx = "^3.5.2"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pypkgs_ubc/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "false"
patch_without_tag = "true"
